--- a/css/font_and_coloring.css
+++ b/css/font_and_coloring.css
@@ -1,6 +1,6 @@
 li * {    
   font-family: Arial, Helvetica, sans-serif;
-  list-style-image: url("https://developer-vs.github.io/activities_images/images/my_triangle.png");
+  list-style-image: url("activities_images/images/my_triangle.png");
 }
 
 h1 {
