--- a/css/font_and_coloring.css
+++ b/css/font_and_coloring.css
@@ -1,4 +1,4 @@
-li * {    
+li {    
   font-family: Arial, Helvetica, sans-serif;
   font-size: 28px;
   list-style-image: url("https://raw.githubusercontent.com/developer-vs/activities_images/master/images/my_triangle.png");
