--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,16 @@ body {
   color: #2f3432;
 }
 
+.steps {
+  line-height: 1.6em;
+}
+
+p {
+  line-height: 1.6em;
+}
+
 nav {
   background: #6a5750;
-  padding: 6px;
-  /* margin-top: 20px; */
 }
 
 nav ul {
@@ -16,11 +22,8 @@ nav ul {
 }
 
 nav ul li {
-  padding: 8px;
-}
-
-li {
-  padding: 2px;
+  line-height: 2em;
+  padding: 10px;
 }
 
 a {
@@ -50,8 +53,101 @@ h1 {
 h2 {
   padding-top: 40px;
   color: #6a5750;
+  font-size: 1.7em;
 }
 
 h3 {
+  padding-top: 20px;
   color: #b5a397;
+}
+
+nav.main_nav li:hover a {
+  color: #000000;
+}
+
+nav.main_nav li:hover {
+  background: #f6f1ed;
+}
+
+.main_nav {
+  display: none;
+}
+
+.main_nav:hover {
+  display: block;
+}
+
+#access_nav:hover ~ .main_nav {
+  display: block;
+}
+
+#access_nav:focus ~ .main_nav {
+  display: block;
+}
+
+#access_nav {
+  background-image: -webkit-repeating-linear-gradient(
+    #fff,
+    #fff 3px,
+    #30231d 2px,
+    #30231d 8px
+  );
+  background-image: repeating-linear-gradient(
+    #fff,
+    #fff 3px,
+    #30231d 2px,
+    #30231d 8px
+  );
+}
+.access_nav_design {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2em;
+  height: 2em;
+  overflow: hidden;
+  background: #30231d 50% 50% / 30px 20px no-repeat;
+  padding: 5px;
+}
+
+table,
+th,
+td {
+  border: 2px solid #ffffff;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+th,
+td {
+  padding: 14px;
+  text-align: center;
+}
+
+th {
+  background: #6a5750;
+  color: #ffffff;
+  border-bottom: 6px solid #ffffff;
+}
+
+tr:nth-child(odd) {
+  background: #d5dcee;
+}
+
+tr:nth-child(even) {
+  background: #ebeef6;
+}
+
+tr:hover {
+  background: #f6f1ed;
+}
+.col {
+  width: 33.33%;
 }
